# KarnAI

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  Setup-KarnAIEnv.ps1  __init__.py  pyproject.toml  pytest.ini  scryfall_card.schema.json  warp_review.md
.cleanup-backup/: Makefile  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md
.patch-backup-20251011_063628/: etl_README.md
.strip-backup-20251011_064105/: mypy.ini  ruff.toml
db/: __init__.py  db_api.py
docs/: 01_functional_requirements.md  02_nonfunctional_requirements.md  03_metrics.md  05_contracts.md  06_ingestion.md  07_persistence.md  08_domain_model.md  09_rules_engine.md  10_props_fuzz.md  11_dsl_ir.md  12_deck_rules.md  13_scheduler.md  14_env_gymnasium.md  15_eval_harness.md  16_cli_console.md  17_bots.md  18_rl_core.md  19_replay.md  20_metrics.md  Functional Requirements.md  Glossary.md  KarnAI_POC_Scope.md  KarnAI_Vision.md  Non-Functional Requirements.md  Traceability Requirements Matrix.csv  architecture.md  data-flow.md  deployment.md  karn_poc_todo_list.md  tech-stack.md
etl/: .env.example  Makefile  README_catalogs.md  config.yml  etl.py  etl_load.py  etl_stage.py  scryfall_fetch.py
schemas/: README.md  ability.schema.json  action.schema.json  card.schema.json  config.schema.json  decklist.schema.json  gamestate.schema.json  observation.schema.json  oracle_face.schema.json  reward.schema.json  zone.schema.json
scripts/: Set-KarnAIEnv.ps1
tests/: test_cli.py  test_cli_integration.py  test_contracts.py  test_cr_loader.py  (+23 more)
(+242 files in other folders)
