[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "karnai"
version = "0.1.0"
description = "KarnAI: Gymnasium/PettingZoo environment for MTG Commander (EDH)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Jeffrey Robertson"}
]
dependencies = [
  "gymnasium>=0.29",
  "pettingzoo>=1.24",
  "numpy>=1.26",
  "pandas>=2.2",
  "pydantic>=2.7",
  "duckdb>=1.0",
  "pyarrow>=16.0",
  "typer>=0.12",
  "rich>=13.7",
  "opentelemetry-api>=1.26",
  "opentelemetry-sdk>=1.26",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "ruff>=0.5",
  "hypothesis>=6.100",
  "pre-commit>=3.7",
]

[project.scripts]
karnai = "karnai.cli.karnai:app"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
strict_optional = true
no_implicit_optional = true
show_error_codes = true
exclude = ["build", "dist", ".venv"]

[tool.pytest.ini_options]
addopts = "-q --cov=karnai --cov-report=term-missing"
python_files = "test_*.py"
